@@ -11,6 +11,7 @@ BUGFIX: touch on blank space in menu do nothing (sshow empty screen before)
 BUGFIX: correctly using of BMA423 irqs
 REFACTOR: using esp32 Preferences instead of deprecated EEPROM
 REFACTOR: using esp32 Preferences instead of SPIFFS to handle RuNAfterCompilation
+REFACTOR: using esp32 Preferences instead of SPIFFS to storage alarms
 REFACTOR: PEKShort on apps return to app menu by default instead of watch face
 REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
 REFACTOR: AppMenu launching from watch faces by swipe up
